fix container size to delete overflow

--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-html, body {
-  height: auto;
-  display: flex;
-}
-
 body {
   margin: 0;
   display: grid;
@@ -11,20 +6,18 @@ body {
 
 #container {
   display: grid;
-  grid-template-rows: 100px 60px 1fr 1fr;
-  width: 100vw;
-  height: 100vh;
+  grid-template-rows: 100px 60px 380px 1fr;
   gap: 10px;
 }
 
 #background {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: -1;
   object-fit: cover;
   margin: 0;
   background-position: center;
-  position: absolute;
+  position: fixed;
   opacity: 0.5;
 }
 
@@ -95,7 +88,6 @@ body {
   align-items: center;
   margin-top: 30px;
   flex-wrap: wrap;
-  overflow: auto;
 }
 
 .middle-div {
